수강(학생), 강의(교수자) 기능 추가